Home Page Files

--- a/index.html
+++ b/index.html
@@ -8,19 +8,54 @@
   <link rel="stylesheet" href="css/default-styles.css?v=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
   <script src="assets/js/custom.js"></script>
-	<div class="body-container">
-		<div class="row">
-			<div class="col-sm-12">
-				<img src="https://place-hold.it/1920x600"/>
+		<section id="home-banner">
+			<div class="home-banner-content">
+				<h1>Hello Developer!</h1>
+				<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+				
 			</div>
-		</div>
+		</section>
+	<div class="body-container">
+		
+		<section id="column-sections">
+			<div class="row">
+				<div class="col-md-4 col-xs-12">
+					<div class="columns-padding">
+						<a href=#">
+							<img src='images/400x300.png' />
+						</a>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<a href="#" class="site-button">Read More</a>
+					</div>
+				</div>
+				<div class="col-md-4 col-xs-12">
+					<div class="columns-padding">
+						<a href=#">
+							<img src='images/400x300.png' />
+						</a>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<a href="#" class="site-button">Read More</a>
+					</div>
+				</div>
+				<div class="col-md-4 col-xs-12">
+					<div class="columns-padding">
+						<a href=#">
+							<img src='images/400x300.png' />
+						</a>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<a href="#" class="site-button">Read More</a>
+					</div>
+				</div>
+			</div>
+		
+		</section>
 	</div>
 </body>
 </html>
