Changing Home Page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Allen Test</title>
-  <link rel="stylesheet" href="css/default-styles.css?v=1.0">
+  <link rel="stylesheet" href="css/default-styles.css?v=2.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <!-- Latest compiled and minified JavaScript -->
@@ -13,8 +13,8 @@
 
 </head>
 
-<body>
-  <script src="assets/js/custom.js"></script>
+<body> 
+	<div class="main-container">
 		<section id="home-banner">
 			<div class="home-banner-content">
 				<h1>Hello Developer!</h1>
@@ -22,40 +22,43 @@
 				
 			</div>
 		</section>
-	<div class="body-container">
+		<div class="body-container">
+			
+			<section id="column-sections">
+				<div class="row">
+					<div class="col-md-4 col-xs-12">
+						<div class="columns-padding">
+							<a href=#">
+								<img src='images/400x300.png' />
+							</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<a href="#" class="site-button">Read More</a>
+						</div>
+					</div>
+					<div class="col-md-4 col-xs-12">
+						<div class="columns-padding">
+							<a href=#">
+								<img src='images/400x300.png' />
+							</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<a href="#" class="site-button">Read More</a>
+						</div>
+					</div>
+					<div class="col-md-4 col-xs-12">
+						<div class="columns-padding">
+							<a href=#">
+								<img src='images/400x300.png' />
+							</a>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<a href="#" class="site-button">Read More</a>
+						</div>
+					</div>
+				</div>
+			
+			</section>
+		</div>
 		
-		<section id="column-sections">
-			<div class="row">
-				<div class="col-md-4 col-xs-12">
-					<div class="columns-padding">
-						<a href=#">
-							<img src='images/400x300.png' />
-						</a>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						<a href="#" class="site-button">Read More</a>
-					</div>
-				</div>
-				<div class="col-md-4 col-xs-12">
-					<div class="columns-padding">
-						<a href=#">
-							<img src='images/400x300.png' />
-						</a>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						<a href="#" class="site-button">Read More</a>
-					</div>
-				</div>
-				<div class="col-md-4 col-xs-12">
-					<div class="columns-padding">
-						<a href=#">
-							<img src='images/400x300.png' />
-						</a>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						<a href="#" class="site-button">Read More</a>
-					</div>
-				</div>
-			</div>
 		
-		</section>
 	</div>
 </body>
 </html>
