--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+	<!-- Custom JS -->
+	<script src="js/custom.js"></script>
 	<!-- Popper JS -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
@@ -72,17 +73,8 @@
 		
 		
 		<script>
-			$(document).ready(function(){
-				$.get("data.json", 
-					function(data, status){
-						var accordions = data;
-						for (var i = 0; i < accordions.length; i++){
-							var accordion = accordions[i];
-							$("div.wow").append("<p>" + accordion.title + "<br>" + accordion.content + "</p>");
-						}
-					},"json"
-				);
-			});
+			
+			
 		</script>
 		
 	</div>
